# neosynaptex

./: .gitignore  .gitleaks.toml  .importlinter  .pre-commit-config.yaml  .zenodo.json  AUDIT_REPORT_2026-04-01.md  CANONICAL_OWNERSHIP.yaml  CANONICAL_POSITION.md  CFP_PROTOCOL.md  CNS_AI_ARCHIVE_LOCATION.md  CONTRACT.md  CONTRIBUTING.md  Dockerfile.reproduce  LICENSE_BOUNDARIES.md  Makefile  PROTOCOL.md  README.md  REPO_TOPOLOGY.md  SECURITY.md  SESSION_CLOSE_2026-04-14.md  XFORM_MANUSCRIPT_DRAFT.md  XFORM_NEURO_DIGITAL_SYMBIOSIS.md  analyze.py  axioms.py  coherence_bridge_demo.json  demo.py  demo_multi.py  demo_real.py  evl_aggregator.py  evl_dfa.py  evl_effect_size.py  neosynaptex.py  pyproject.toml  reproduce.py  run_btcusdt_replication.py  run_calibration_diagnostic.py  run_chf2db_hrv_contrast.py  run_dcvp_real.py  run_eegbci_dh_replication.py  run_fred_indpro_replication.py  (+17 more)
agents/: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
agents/.github/workflows/: ci.yml
agents/examples/: 01_chaos_validation.py  02_confidence_gates.py  03_hybrid_agent.py  04_epistemic_verification.py
agents/manuscript/: gamma_scaling_manuscript.md  phase_diagram_data.json  phase_investigation_raw.json  results_gamma.md  section4_mechanistic_interpretation.md  section5_why_gamma_one.md  t1_correlation_analysis.json  t3_method_falsification.json
agents/scripts/: dnca_full_gamma.py  gamma_phase_investigation.py  reproduce.py
agents/src/neuron7x_agents/: __init__.py  cli.py
agents/tests/unit/: test_cli.py  test_cognitive.py  test_hybrid_agent.py  test_nfi_gamma_orchestrator.py  test_primitives.py  test_regulation.py  test_sero_m0.py  test_sero_sensitivity.py  test_verification.py
core/rust/geosync-accel/: Cargo.toml  README.md  pyproject.toml
probe/: .gitignore  Dockerfile  README.md  pyproject.toml  reproduce.py  seed_ledger.json
probe/evidence/engineering/: reproduce_20260421T170205Z.json
probe/preprint/: probe_dialogue_preprint.md
probe/src/probe/: __init__.py  anti_tautology.py  dialogue_adapter.py  falsification.py  ingestion.py  session.py
probe/tests/: conftest.py  test_anti_tautology.py  test_dialogue_adapter.py  test_falsification.py  test_ingestion.py  test_session.py
substrates/bn_syn/: .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCH_ASSESSMENT.md  BENCHMARK_PROTOCOL.md  BIO-DIGITAL-S12.yaml  CALIBRATION_REPORT.json  CALIBRATION_SUMMARY.md  CHANGELOG.md  CHANGESET_PLAN.yaml  CODEBASE_READINESS.md  CONTRIBUTING.md  DECISION_MEMO.md  DOC_CHANGELOG.md  ELPEG-2026.04.md  EVIDENCE_INDEX.md  EXECUTION_PLAN.md  EXEC_SUMMARY.md  FINAL_REPORT.md  GAP_TABLE.md  GHTPO-2026.02.md  GOVERNANCE_VERIFICATION_REPORT.md  HARDENING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INVENTORY.json  LAUNCH_READINESS_REPORT.md  MERGE_READINESS.md  PRD.md  PRODUCTION_READINESS_DOSSIER.md  PRODUCT_READINESS_DOSSIER.md  PR_DESCRIPTION.md  PR_DESCRIPTION_EVIDENCE.md  PR_FINAL_DESCRIPTION.md  PR_READY_CHECKLIST.md  README.md  RISK_REGISTER.md  SECURITY.md  VERIFICATION_REPORT.md  __init__.py  acceptance_map.yaml  (+22 more)
substrates/bn_syn/.github/: BRANCH_PROTECTION_GOVERNANCE.md  CI_SLO.md  PR_GATES.yml  QUALITY_LEDGER.md  REPO_MANIFEST.md  REQUIRED_CHECKS.yml  REQUIRED_STATUS_CONTEXTS.yml  WORKFLOW_CONTRACTS.md  ci_policy.yml  pull_request_template.md  required_checks.json  sse_sdo.yml  sse_sdo_fhe.yml  sse_sdo_max.yml
substrates/bn_syn/.repo-governor/: inventory.json  protocol.yml
substrates/bn_syn/artifacts/: coverage_backlog.md  rwu_log.md
substrates/bn_syn/benchmarks/: README.md  __init__.py  baseline.json  bench_adex.py  bench_criticality.py  bench_dt_invariance.py  bench_plasticity.py  bench_synapses.py  benchmark_dt.py  benchmark_plasticity.py  benchmark_scale.py  common.py  criticality.py  determinism.py  equivalence_report.md  kernel_profile.json  metrics.py  performance_utils.py  physics_accelerated.json  report.py  run_benchmarks.py  scalability.py  scaling.py  scaling_plan.md  throughput_gain.json
substrates/bn_syn/bibliography/: mapping.yml
substrates/bn_syn/ci/: agent_x_lab_bundle_audit_prompt.md  envelope_spec.json  milestone_state.json
substrates/bn_syn/claims/: README.md  claims.yml
substrates/bn_syn/docs/: ACTIONS_TEST_PROTOCOL.md  API_CONTRACT.md  API_STABILITY.md  ARCHITECTURE.md  ARCHITECTURE_INVARIANTS.md  ASSUMPTIONS.md  AUDIT_FINDINGS.md  AUDIT_LEDGER.md  AUDIT_TASKS_2026-02-15.md  BENCHMARKS.md  BENCHMARK_MAP.md  BIBLIOGRAPHY.md  BUILD_DOCS.md  CANONICAL_PROOF.md  CI_BATTLE_USAGE_AUDIT_2026-02-07.md  CI_GATES.md  COMPONENT_AUDIT.md  CONFERENCE_RUNBOOK.md  CONSTITUTIONAL_AUDIT.md  CRITICALITY_CONTROL_VS_MEASUREMENT.md  DEMO.md  DEMO_REVIEW.md  DETERMINISM.md  DOCUMENTATION_FORMALIZATION.md  DOC_DEBT.md  EMERGENT_ORCHESTRATION_ATLAS.md  ENFORCEMENT_MATRIX.md  ENTROPY_LEDGER.md  EVIDENCE_CONTRACT.md  EVIDENCE_COVERAGE.md  GENESIS_RUN_PLAN.md  GOVERNANCE.md  HYPOTHESIS.md  INDEX.md  INPUTS.md  INTEGRATION.md  INVENTORY.md  LEGENDARY_QUICKSTART.md  M0_BOOTSTRAP_FOUNDATION.md  MAINTENANCE.md  (+51 more)
substrates/bn_syn/entropy/: __init__.py  acceptance_map.yaml  baseline.json  current.json  metrics.json  policy.json
substrates/kuramoto/: .golangci.yml  .pre-commit-config.yaml  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  LICENSE  PATENTS.md  PERFORMANCE_REGRESSION_GUIDE.md  PHYSICS_IMPLEMENTATION_SUMMARY.md  PRODUCT_PAIN_SOLUTION.md  PROJECT_DEVELOPMENT_STAGE.md  README.md  REMEDIATION_SUMMARY.md  SECURITY.md  SETUP.md  SYSTEM_OPTIMIZATION_SUMMARY.md  TESTING.md  __init__.py  adapter.py  buf.gen.yaml  buf.yaml  conftest.py  deploy-environments.yml  docker-compose.yml  hbunified.py  mkdocs.yml  pin-terraform-version.yml  pyproject.toml  sitecustomize.py  СТАН_РОЗВИТКУ_ПРОЄКТУ.md
substrates/mfn_plus/: .zenodo.json  DEPRECATED.md  README.md  SECURITY.md  __init__.py  asv.conf.json  pyproject.toml
substrates/mlsdm/: .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SAFETY_POLICY.yaml  pyproject.toml
(+10109 files in other folders)
