[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neosynaptex"
version = "3.0.0"
description = "NFI — Neuromodulatory Field Intelligence. γ ≈ 1.0 across independent substrates. Intelligence as regime property."
readme = "README.md"
authors = [{ name = "Yaroslav Vasylenko", email = "neuron7x@proton.me" }]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
keywords = [
    "neuroscience",
    "criticality",
    "coherence",
    "scaling-laws",
    "topology-laws",
    "metastability",
    "gamma-scaling",
    "cognitive-field-protocol",
    "human-ai-co-adaptation",
    "agent-based-model",
    "phase-transition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "import-linter>=2.0",
]
security = [
    "pip-audit>=2.7.0",
    "bandit>=1.7.9",
]

[project.urls]
Repository = "https://github.com/neuron7xLab/neosynaptex"
Issues = "https://github.com/neuron7xLab/neosynaptex/issues"

[tool.setuptools]
py-modules = ["neosynaptex"]

[tool.setuptools.packages.find]
include = ["core*", "contracts*", "substrates*", "agents*", "evl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::RuntimeWarning"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "N803",  # H is a standard mathematical symbol (Hurst exponent)
    "N806",  # T, X, Y, H, N are standard scientific variable names
    "N814",  # GammaRegistry as _GR is intentional private alias
    "N818",  # InvariantViolation is NFI domain naming, not generic Error
    "E402",  # late imports needed for circular import avoidance in core
    "E741",  # l is standard lag variable in Granger/time-series code
    "B905",  # zip strict= is noisy for scientific code
    "B007",  # loop variable naming is fine in scientific context
]
