[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "neosynaptex"
version = "3.0.0"
description = "NFI — Neuromodulatory Field Intelligence. γ ≈ 1.0 across independent substrates. Intelligence as regime property."
readme = "README.md"
authors = [{ name = "Yaroslav Vasylenko", email = "neuron7x@proton.me" }]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
keywords = [
    "neuroscience",
    "criticality",
    "coherence",
    "scaling-laws",
    "topology-laws",
    "metastability",
    "gamma-scaling",
    "cognitive-field-protocol",
    "human-ai-co-adaptation",
    "agent-based-model",
    "phase-transition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "mypy>=1.20.1",
    "ruff>=0.15.10",
    "import-linter>=2.11",
    "pyyaml>=6.0",
    # Required by core/nulls/wavelet_phase.py (N2 null family, NULL-SCREEN-v1.1).
    "PyWavelets>=1.8",
    # Chained via run_null_family_screening.py → substrates/physionet_hrv/nsr2db_client.py
    # (module-level ``import wfdb``); needed for tests/test_null_screening.py collection.
    "wfdb>=4.2",
    # Required by run_nsr_chf_deployment_validation.py (Point 5 scaffold)
    # and tests/test_deployment_validation.py (8 unit tests).
    "scikit-learn>=1.5",
]
security = [
    "pip-audit>=2.10.0",
    "bandit>=1.9.4",
]

[project.urls]
Repository = "https://github.com/neuron7xLab/neosynaptex"
Issues = "https://github.com/neuron7xLab/neosynaptex/issues"

[tool.setuptools]
py-modules = ["neosynaptex"]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "core*",
    "contracts*",
    "substrates*",
    "agents*",
    "evl*",
    "evidence",
    "evidence_bundle_v1",
]

# Ship the canonical γ-ledger and proof-chain manifest as package data so
# that ``pip install`` (wheel or editable) carries the artifacts read at
# module-import time by ``core.gamma_registry`` and
# ``neosynaptex._load_chain_root``. Without this the wheel imports crash
# with ``GammaRegistryError: Ledger not found`` on every consumer.
[tool.setuptools.package-data]
evidence = ["*.json", "*.jsonl", "*.txt"]
evidence_bundle_v1 = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::RuntimeWarning"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (>30 s); run explicitly or in full CI only",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "N803",  # H is a standard mathematical symbol (Hurst exponent)
    "N806",  # T, X, Y, H, N are standard scientific variable names
    "N814",  # GammaRegistry as _GR is intentional private alias
    "N818",  # InvariantViolation is NFI domain naming, not generic Error
    "E402",  # late imports needed for circular import avoidance in core
    "E741",  # l is standard lag variable in Granger/time-series code
    "B905",  # zip strict= is noisy for scientific code
    "B007",  # loop variable naming is fine in scientific context
]

[tool.ruff.lint.isort]
# pywt (PyWavelets) is explicitly marked third-party so ruff's heuristic
# classifier cannot confuse it with a first-party module on environments
# where a local ``pywt/`` directory happens to exist alongside the repo
# (observed on development machines where the upstream PyWavelets source
# is cloned for reference). Without this, the same source file is
# accepted locally but rejected by ``ruff check`` on CI due to import-
# group disagreement (or vice versa).
known-third-party = ["pywt"]
