# ═══════════════════════════════════════════════════════════════════════
#  neuron7x-agents · Hybrid Cognitive Functions for Intelligent Systems
# ═══════════════════════════════════════════════════════════════════════
#  Biologically-inspired cognitive primitives engineered as composable
#  modules for AI agents, models, and multi-agent architectures.
#
#  Author: Yaroslav Vasylenko · neuron7xLab · Ukraine · 2026
# ═══════════════════════════════════════════════════════════════════════

[project]
name = "neuron7x-agents"
version = "0.1.0"
description = "Hybrid cognitive functions: bio-inspired reasoning, homeostatic regulation, and epistemic verification for intelligent agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yaroslav Vasylenko", email = "neuron7xlab@gmail.com" }]
maintainers = [{ name = "Yaroslav Vasylenko", email = "neuron7xlab@gmail.com" }]
requires-python = ">=3.10,<3.14"
keywords = [
    "cognitive-architecture",
    "agents",
    "bio-inspired",
    "homeostasis",
    "epistemic-verification",
    "reasoning-engine",
    "neurosymbolic",
    "hormonal-regulation",
    "fail-closed-evaluation",
    "multi-agent-systems",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
science = ["scipy>=1.10.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
ml = ["torch>=2.0.0"]
full = ["neuron7x-agents[science,api,ml]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/neuron7xLab/neuron7x-agents"
Repository = "https://github.com/neuron7xLab/neuron7x-agents"
Issues = "https://github.com/neuron7xLab/neuron7x-agents/issues"

[project.scripts]
n7x-agents = "neuron7x_agents.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neuron7x_agents = ["py.typed"]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]
exclude = ["src/neuron7x_agents/verification/kriterion"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM",
    "TCH", "RUF", "PT", "S", "T20",
]
ignore = [
    "S101",    # assert in tests is fine
    "RUF002",  # Unicode math symbols (α, γ, ×) in docstrings are intentional
    "RUF003",  # Unicode math symbols in comments are intentional
]

[tool.ruff.lint.isort]
known-first-party = ["neuron7x_agents"]

# ── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["verification/kriterion", "sero_m0"]

[[tool.mypy.overrides]]
module = ["neuron7x_agents.regulation.sero_m0", "neuron7x_agents.verification.kriterion.*"]
ignore_errors = true

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "property: property-based tests",
]

# ── Coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/neuron7x_agents"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
