[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradepulse"
dynamic = ["version", "readme"]
description = "Advanced algorithmic trading framework with geometric market indicators"
authors = [{ name = "TradePulse Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
keywords = ["trading", "quant", "algorithmic", "markets", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    # Core analytics stack
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "pandas>=2.3.3",
    "networkx>=3.5",
    "deap>=1.4.1",
    "torch>=2.1.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.4.2",
    "SQLAlchemy>=2.0.36",
    "optuna>=3.6.1,<4.0.0",
    "numba>=0.60.0",
    # Data validation
    "pydantic>=2.12.4,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pandera>=0.20.4,<0.27",
    "exchange-calendars>=4.11.1",
    # Configuration & instrumentation
    "PyYAML>=6.0.3",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "prometheus-client>=0.23.1",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "aiokafka>=0.11.0",
    "pyarrow>=15.0.0",
    "redis>=7.0.0",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "ccxt>=4.5.12",
    "tenacity>=9.1.2",
    "aiolimiter>=1.2.1",
    "fastapi>=0.120.0,<1.0.0",
    "strawberry-graphql[fastapi]>=0.214.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    # Templates & packaging helpers
    "click>=8.3.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.37.0",
    # Dashboard & visualization
    "streamlit>=1.31.0",
    "streamlit-authenticator>=0.3.1",
    # Security: security-critical transitive dependencies pinned via constraints/security.txt
    "PyJWT[crypto]>=2.9.0",
    "cryptography>=46.0.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
connectors = [
    "ccxt>=4.5.12",
    "websockets>=15.0.1",
    "alpaca-py>=0.42.2",
    "polygon-api-client>=1.15.4",
]
feature_store = [
    "pyarrow>=21.0.0",
    "polars>=1.34.0",
]
ecs = [
    "pyarrow>=21.0.0",
]
neuro_advanced = [
    "gudhi>=3.10.0",
    "POT>=0.9.5",
    "statsmodels>=0.14.0",
    "PyWavelets>=1.4.0",
]
dev = [
    "black>=25.9.0",
    "flake8>=7.1.1",
    "ruff>=0.14.0",
    "isort>=5.13.2",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-httpx>=0.35.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.8.0",
    "pytest-profiling>=1.8.1; python_version < \"3.13\"",
    "pytest-rerunfailures>=15.0",
    "mutmut>=3.3.1",
    "hypothesis>=6.140.3",
    "scalene>=1.5.55",
    "py-spy>=0.4.1",
    "bandit>=1.8.6",
    "protobuf>=6.32.1",
    "build>=1.3.0",
    "twine>=6.2.0",
    "pip-tools>=7.5.1",
    "cibuildwheel>=3.2.1",
    "towncrier>=25.8.0",
    "z3-solver>=4.13.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.16.1",
    "mike>=2.1.3",
]
gpu = [
    "numba>=0.62.1",
    "cupy>=13.6.0",
]

[project.scripts]
tradepulse-sync = "scripts.resilient_data_sync:main"
tradepulse-db = "scripts.db_migrate:cli"
tradepulse-server = "application.runtime.server:main"

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
version_file = "src/_version.py"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "analytics",
    "analytics.*",
    "application",
    "application.*",
    "backtest",
    "backtest.*",
    "core",
    "core.*",
    "domain",
    "domain.*",
    "sandbox",
    "sandbox.*",
    "execution",
    "execution.*",
    "interfaces",
    "interfaces.*",
    "libs",
    "libs.*",
    "tradepulse",
    "tradepulse.*",
    "tradepulse_agent",
    "tradepulse_agent.*",
    "markets",
    "markets.*",
    "modules",
    "modules.*",
    "neurotrade_pro",
    "neurotrade_pro.*",
    "observability",
    "observability.*",
    "tools",
    "tools.*",
    "src",
    "src.*",
]
# Legacy only. Canonical namespace is ``tradepulse.*``.
# 'src' entries remain so that existing ``src.tradepulse`` imports keep working
# while we migrate callers. See docs/architecture/packaging.md and
# scripts/check_namespace_policy.py for enforcement details.
exclude = ["tests", "tests.*", "docs", "docs.*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
"tradepulse.neural_controller" = ["config/*.yaml"]

[tool.mutmut]
paths_to_mutate = [
    "core",
    "backtest",
    "execution",
    "src",
]
tests_dir = "tests"
runner = "python -m pytest tests/unit tests/integration tests/property -q"
use_coverage = true

[tool.coverage.run]
branch = true
parallel = true
source = ["core", "backtest", "execution", "analytics", "src"]

[tool.coverage.report]
fail_under = 98
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
extend-exclude = ["docs/notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]
"benchmarks/*.py" = ["E402"]
"docs/archive/*.py" = ["E402"]
"scripts/eval/*.py" = ["E402"]
"tests/core/agent/test_pqf_pscs.py" = ["E402"]
"tests/scripts/test_calibrate_controllers.py" = ["E402"]
"tests/sdk/mlsdm/test_replay_harness.py" = ["E402"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.towncrier]
directory = "newsfragments"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
template = "tools/release/towncrier_template.jinja"
title_format = "{name} {version} ({project_date})"
issue_format = "#{issue}"
name = "TradePulse"

[[tool.towncrier.section]]
path = ""
name = "TradePulse"

[[tool.towncrier.type]]
directory = "feature"
name = "🚀 Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "🐛 Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "performance"
name = "⚡ Performance"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "🧹 Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "📝 Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "✅ Tests"
showcontent = true

[[tool.towncrier.type]]
directory = "ci"
name = "🤖 CI"
showcontent = true

[[tool.towncrier.type]]
directory = "build"
name = "📦 Build"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "🔐 Security"
showcontent = true

[[tool.towncrier.type]]
directory = "chore"
name = "🧰 Chores"
showcontent = true
